--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@types/jest": "^26.0.24",
+    "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
     "babel-jest": "^27.0.6",
