--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "posts",
   "version": "1.0.0",
   "description": "Application for writing notes",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "test": "jest",
     "build": "cross-env NODE_ENV=production webpack --mode production",
@@ -28,6 +28,23 @@
     "url": "https://github.com/Horrorspace/Posts/issues"
   },
   "homepage": "https://github.com/Horrorspace/Posts#readme",
+  "eslintConfig": {
+    "plugins": ["import"],
+    "rules": {
+      "import/no-unresolved": "error"
+    },
+    "settings": {
+      "import/parsers": {
+        "@typescript-eslint/parser": [".ts", ".tsx"]
+      },
+      "import/resolver": {
+        "typescript": {
+          "alwaysTryTypes": true,
+          "project": "path/to/folder"
+        }
+      }
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
@@ -35,10 +52,12 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.24",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
     "bootstrap": "^5.0.2",
@@ -47,6 +66,7 @@
     "core-js": "^3.14.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
@@ -63,6 +83,8 @@
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.7",
+    "rxjs": "^7.3.0",
+    "rxjs-operators": "^1.1.3",
     "sass": "^1.35.2",
     "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
