--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,7 +49,7 @@
       "@react/*": ["typescript/react/*"],
       "@redux/*": ["typescript/redux/*"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-    "rootDirs": ["src/typescript/react", "src/typescript/core"],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
+    //"rootDirs": ["src/typescript/react", "src/typescript/core"],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
