--- a/package.json
+++ b/package.json
@@ -29,13 +29,18 @@
   },
   "homepage": "https://github.com/Horrorspace/Posts#readme",
   "eslintConfig": {
-    "plugins": ["import"],
+    "plugins": [
+      "import"
+    ],
     "rules": {
       "import/no-unresolved": "error"
     },
     "settings": {
       "import/parsers": {
-        "@typescript-eslint/parser": [".ts", ".tsx"]
+        "@typescript-eslint/parser": [
+          ".ts",
+          ".tsx"
+        ]
       },
       "import/resolver": {
         "typescript": {
@@ -82,6 +87,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.7",
     "rxjs": "^7.3.0",
     "rxjs-operators": "^1.1.3",
